--- a/mifosng-android/src/main/res/layout/fragment_savings_account_transaction.xml
+++ b/mifosng-android/src/main/res/layout/fragment_savings_account_transaction.xml
@@ -3,8 +3,8 @@
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -26,18 +26,18 @@
         android:layout_margin="16dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
-            app:cardUseCompatPadding="true"
-            android:id="@+id/cv_1">
+            app:cardUseCompatPadding="true">
 
             <LinearLayout
                 android:id="@+id/linear_layout_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="10dp">
 
                 <TextView
                     android:id="@+id/tv_clientName"
@@ -59,28 +59,28 @@
 
         </androidx.cardview.widget.CardView>
 
-      <!--  <View
-            android:id="@+id/divider_1"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/cv_1"
-            android:background="@color/black" />-->
+        <!--  <View
+              android:id="@+id/divider_1"
+              android:layout_width="fill_parent"
+              android:layout_height="1dp"
+              android:layout_below="@+id/cv_1"
+              android:background="@color/black" />-->
 
         <TableLayout
             android:id="@+id/tbl_transaction_details"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/cv_1"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="10dp">
 
             <TableRow
                 android:id="@+id/tbl_transaction_details_row_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:layout_width="0dp"
@@ -105,8 +105,8 @@
                 android:id="@+id/tbl_transaction_details_row_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/transaction_date"
@@ -128,38 +128,11 @@
             </TableRow>
 
             <TableRow
-                android:id="@+id/tbl_transaction_details_row_3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp">
-
-                <TextView
-                    android:id="@+id/tv_transaction_amount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.6"
-                    android:text="@string/amount"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                <EditText
-                    android:id="@+id/et_transaction_amount"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.4"
-                    android:gravity="left"
-                    android:inputType="numberDecimal" />
-
-            </TableRow>
-
-            <TableRow
                 android:id="@+id/tbl_transaction_details_row_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingBottom="10dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp">
 
                 <TextView
                     android:id="@+id/tv_payment_type"
@@ -179,31 +152,89 @@
 
             </TableRow>
 
+            <TableRow
+                android:id="@+id/tbl_transaction_details_row_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <!-- <TextView
+                     android:id="@+id/tv_transaction_amount"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_vertical"
+                     android:layout_weight="0.6"
+                     android:text="@string/amount"
+                     android:visibility="gone"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />-->
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/TextInput.Base"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:backgroundTint="@color/black"
+                    android:textColorHint="@color/black">
+
+                    <EditText
+                        android:id="@+id/et_transaction_amount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:hint="@string/amount"
+                        android:imeOptions="actionNext"
+                        android:inputType="numberDecimal"
+                        android:singleLine="true"
+                        android:textColorHint="@color/black"
+                        android:textSize="15sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <!-- <EditText
+                     android:id="@+id/et_transaction_amount"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_vertical"
+                     android:layout_weight="0.4"
+                     android:gravity="left"
+                     android:inputType="numberDecimal" />-->
+
+            </TableRow>
+
         </TableLayout>
 
-        <Button
-            android:id="@+id/bt_cancelTransaction"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@+id/tbl_transaction_details"
             android:layout_marginTop="10dp"
-            android:text="@string/cancel"
-            android:textSize="14sp"
-            android:layout_marginLeft="10dp"
-            android:layout_alignParentLeft="true" />
+            android:orientation="horizontal"
+            android:weightSum="2">
 
-        <Button
-            android:id="@+id/bt_reviewTransaction"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/tbl_transaction_details"
-            android:layout_marginTop="10dp"
-            android:textSize="14sp"
-            android:text="@string/review_transaction"
-            android:layout_marginRight="10dp"
-            android:layout_alignParentRight="true" />
+            <Button
+                android:id="@+id/bt_cancelTransaction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tbl_transaction_details"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/login_button_rounded"
+                android:text="@string/cancel"
+                android:textSize="14sp" />
+
+            <Button
+                android:id="@+id/bt_reviewTransaction"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/login_button_rounded"
+                android:text="@string/review_transaction"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
 
     </RelativeLayout>
 </ViewFlipper>
