--- a/mifosng-android/src/main/res/layout/row_loan_repayment_schedule.xml
+++ b/mifosng-android/src/main/res/layout/row_loan_repayment_schedule.xml
@@ -25,9 +25,9 @@
             android:id="@+id/view_status_indicator"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:layout_gravity="center|end"
-            android:layout_marginEnd="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_gravity="center|start"
+            android:layout_marginEnd="50dp"
+            android:layout_marginRight="50dp"
             android:layout_marginLeft="10dp"
             android:background="@color/light_red" />
 
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="end"
+            android:gravity="start"
             android:textStyle="bold"
             android:textSize="14sp"
             android:autoSizeTextType="uniform"
@@ -50,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="end"
+            android:gravity="center"
             android:text="200005"
             android:textStyle="bold"
             android:textSize="14sp"
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="end"
+            android:gravity="center"
             android:text="200005"
             android:textSize="14sp"
             android:autoSizeTextType="uniform"
