--- a/mifosng-android/src/main/res/layout/fragment_charge_list.xml
+++ b/mifosng-android/src/main/res/layout/fragment_charge_list.xml
@@ -21,7 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_centerHorizontal="true"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
