--- a/mifosng-android/src/main/res/layout/fragment_group_list.xml
+++ b/mifosng-android/src/main/res/layout/fragment_group_list.xml
@@ -17,11 +17,11 @@
         android:inAnimation="@android:anim/fade_in"
         android:outAnimation="@android:anim/fade_out">
 
-        <ProgressBar
+        <!--<ProgressBar
             android:id="@+id/progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" />
+            android:layout_gravity="center" />-->
 
         <ListView
             android:id="@+id/lv_group_list"
