--- a/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule.xml
+++ b/mifosng-android/src/main/res/layout/fragment_loan_repayment_schedule.xml
@@ -3,8 +3,8 @@
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
 <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_flipper"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,9 +24,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cv_loan_repayment_schedule_search"
@@ -42,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:padding="10dp">
+
                 <ImageView
                     android:id="@+id/iv_loan_repayment__schedule_search_icon"
                     android:layout_width="@dimen/dimension_32_dp"
@@ -55,34 +56,40 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
+                    android:layout_marginEnd="4dp"
                     android:layout_marginRight="4dp"
+                    android:layout_toEndOf="@id/iv_loan_repayment__schedule_search_icon"
                     android:layout_toRightOf="@id/iv_loan_repayment__schedule_search_icon"
                     android:background="@android:color/transparent"
                     android:hint="Search..."
                     android:singleLine="true"
                     android:textSize="15sp"
-                    tools:ignore="NotSibling"
-                    android:layout_marginEnd="4dp"
-                    android:layout_toEndOf="@id/iv_loan_repayment__schedule_search_icon"
-                    android:layout_marginStart="8dp" />
+                    tools:ignore="NotSibling" />
 
             </RelativeLayout>
         </androidx.cardview.widget.CardView>
+
         <LinearLayout
             android:id="@+id/ll_repayment__schedule_header"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/cv_loan_repayment_schedule_search"
             android:orientation="horizontal"
             android:padding="10dp"
-            android:layout_below="@+id/cv_loan_repayment_schedule_search"
-            android:weightSum="3">
+            android:weightSum="4">
 
             <TextView
                 android:id="@+id/tv_title_principal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="start"
+                android:layout_weight="1"
+                android:textSize="14sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeMaxTextSize="14sp"
                 android:text="@string/loan_status" />
 
 
@@ -91,16 +98,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/date"
-                android:gravity="center"
-                />
+                android:gravity="start"
+                android:textSize="14sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeMaxTextSize="14sp"
+                android:text="@string/date" />
 
             <TextView
                 android:id="@+id/tv_title_fees"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
+                android:gravity="start"
+                android:textSize="14sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeMaxTextSize="14sp"
                 android:text="@string/loan_amount_due" />
 
             <TextView
@@ -108,20 +122,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="right"
+                android:gravity="center"
+                android:textSize="14sp"
+                android:autoSizeTextType="uniform"
+                android:autoSizeMinTextSize="10sp"
+                android:autoSizeMaxTextSize="14sp"
                 android:text="@string/amount_paid" />
 
 
         </LinearLayout>
+
         <ListView
             android:id="@+id/lv_repayment_schedule"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/ll_repayment__schedule_header"
             android:layout_above="@+id/flrs_footer"
-            android:scrollbars="none"
+            android:layout_below="@+id/ll_repayment__schedule_header"
+            android:divider="@null"
+            android:dividerHeight="0dp"
             android:paddingBottom="10dp"
-            />
+            android:scrollbars="none" />
+
         <include
             android:id="@+id/flrs_footer"
             layout="@layout/fragment_loan_repayment_schedule_footer"
@@ -130,81 +151,81 @@
             android:layout_alignParentBottom="true" />
 
     </RelativeLayout>
-   <!-- <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <!-- <RelativeLayout
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
 
 
-        <TableLayout
-            android:id="@+id/tbl_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+         <TableLayout
+             android:id="@+id/tbl_header"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_gravity="center_horizontal">
 
-            <TableRow
-                android:id="@+id/tableRow3"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@color/transaction_detail_table_header_bg">
+             <TableRow
+                 android:id="@+id/tableRow3"
+                 android:layout_width="fill_parent"
+                 android:layout_height="fill_parent"
+                 android:background="@color/transaction_detail_table_header_bg">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:weightSum="3.50">
+                 <LinearLayout
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:weightSum="3.50">
 
-                </LinearLayout>
+                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_title_principal"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.50"
-                    android:text="@string/loan_status"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                 <TextView
+                     android:id="@+id/tv_title_principal"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="0.50"
+                     android:text="@string/loan_status"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
-                <TextView
-                    android:id="@+id/tv_title_interest"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:text="@string/date"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                 <TextView
+                     android:id="@+id/tv_title_interest"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="1"
+                     android:gravity="center_horizontal"
+                     android:text="@string/date"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <TextView
-                    android:id="@+id/tv_title_fees"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal"
-                    android:text="@string/loan_amount_due"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                 <TextView
+                     android:id="@+id/tv_title_fees"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="1"
+                     android:gravity="center_horizontal"
+                     android:text="@string/loan_amount_due"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-                <TextView
-                    android:id="@+id/tv_title_penalties"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="@string/amount_paid"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
+                 <TextView
+                     android:id="@+id/tv_title_penalties"
+                     android:layout_width="0dp"
+                     android:layout_height="wrap_content"
+                     android:layout_weight="1"
+                     android:gravity="right"
+                     android:text="@string/amount_paid"
+                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
-            </TableRow>
-        </TableLayout>
+             </TableRow>
+         </TableLayout>
 
-        <ListView
-            android:id="@+id/lv_repayment_schedule"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tbl_header"
-            android:layout_centerHorizontal="true" />
+         <ListView
+             android:id="@+id/lv_repayment_schedule"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_below="@id/tbl_header"
+             android:layout_centerHorizontal="true" />
 
-        <include
-            android:id="@+id/flrs_footer"
-            layout="@layout/fragment_loan_repayment_schedule_footer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true" />
-    </RelativeLayout>-->
+         <include
+             android:id="@+id/flrs_footer"
+             layout="@layout/fragment_loan_repayment_schedule_footer"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_alignParentBottom="true" />
+     </RelativeLayout>-->
 </ViewFlipper>
