--- a/mifosng-android/src/main/res/layout/fragment_loan_transactions.xml
+++ b/mifosng-android/src/main/res/layout/fragment_loan_transactions.xml
@@ -7,15 +7,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".online.loantransactions.LoanTransactionsFragment">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_loan_summary_transaction_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="4dp">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/iv_loan_summary_transaction_search_icon"
+                android:layout_width="@dimen/dimension_32_dp"
+                android:layout_height="@dimen/dimension_32_dp"
+                android:layout_centerVertical="true"
+                android:scaleType="centerInside"
+                app:srcCompat="@drawable/ic_search_black_24dp" />
+
+            <EditText
+                android:id="@+id/et_loan_repayment_schedule_search"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_toEndOf="@id/iv_loan_summary_transaction_search_icon"
+                android:layout_toRightOf="@id/iv_loan_summary_transaction_search_icon"
+                android:background="@android:color/transparent"
+                android:hint="Search..."
+                android:singleLine="true"
+                android:textSize="15sp"
+                tools:ignore="NotSibling" />
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 
 
     <ExpandableListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/elv_loan_transactions"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
+        android:scrollbars="none"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="@dimen/text_size_20sp"
+        android:layout_marginEnd="@dimen/text_size_20sp"
+        android:layout_below="@+id/cv_loan_summary_transaction_search"
         android:divider="@null"
         android:dividerHeight="0dp"/>
 </RelativeLayout>
