--- a/mifosng-android/src/main/res/layout/fragment_savings_account_summary.xml
+++ b/mifosng-android/src/main/res/layout/fragment_savings_account_summary.xml
@@ -295,7 +295,10 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="2dp"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:layout_above="@+id/buttons"
             android:layout_below="@+id/savings_transactions"/>
 
         <LinearLayout
