--- a/mifosng-android/src/main/res/layout/row_center_list_item.xml
+++ b/mifosng-android/src/main/res/layout/row_center_list_item.xml
@@ -4,40 +4,128 @@
   ~ This project is licensed under the open source MPL V2.
   ~ See https://github.com/openMF/android-client/blob/master/LICENSE.md
   -->
-<androidx.cardview.widget.CardView
-    android:id="@+id/card_view"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:clickable="true"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    android:layout_marginLeft="2dp"
-    android:layout_marginRight="2dp"
+    app:cardCornerRadius="10dp"
     app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:minHeight="?attr/listPreferredItemHeight"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@android:color/transparent"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:padding="2dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_center_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:lines="1"
+                    android:text="@string/medium_text"
+                    android:textColor="@color/black"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/tv_office_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:text="@string/small_text"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_account_number"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/small_text"
+                android:textColor="@color/gray_dark"
+                android:textSize="12sp"
+                android:padding="2dp"
+                android:layout_marginTop="5dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:padding="2dp"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tv_staff_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/small_text"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/tv_staff_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/small_text"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_status_indicator"
+            android:layout_width="7dp"
+            android:layout_height="match_parent"
+            android:src="@drawable/round_corner" />
+    </LinearLayout>
+
+    <!--<LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:backgroundTint="@color/white"
+        android:minHeight="?attr/listPreferredItemHeight"
+        android:orientation="horizontal"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:id="@+id/linearLayout">
+        android:paddingRight="16dp">
 
-        <com.mifos.mifosxdroid.views.CircularImageView
-            android:id="@+id/iv_status_indicator"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1"
-            android:src="@color/light_yellow"/>
+        &lt;!&ndash; <com.mifos.mifosxdroid.views.CircularImageView
+             android:id="@+id/iv_status_indicator"
+             android:layout_width="25dp"
+             android:layout_height="25dp"
+             android:layout_gravity="center_vertical"
+             android:layout_marginEnd="8dp"
+             android:layout_marginRight="8dp"
+             android:layout_weight="1"
+             android:src="@color/light_yellow"/>&ndash;&gt;
 
         <LinearLayout
             android:layout_width="0dp"
@@ -61,7 +149,7 @@
                     android:lines="1"
                     android:text="@string/medium_text"
                     android:textColor="@color/black"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/tv_center_id"
@@ -71,7 +159,7 @@
                     android:gravity="end"
                     android:text="@string/small_text"
                     android:textColor="@color/black"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
             </LinearLayout>
 
             <TextView
@@ -80,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/small_text"
                 android:textColor="@color/gray_dark"
-                android:textSize="12sp"/>
+                android:textSize="12sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,8 +179,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -102,7 +190,7 @@
                         android:layout_weight="1"
                         android:text="@string/small_text"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_staff_name"
@@ -111,14 +199,14 @@
                         android:layout_weight="1"
                         android:text="@string/small_text"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
                     android:orientation="vertical"
                     android:paddingLeft="30dp">
 
@@ -129,7 +217,7 @@
                         android:layout_weight="1"
                         android:text="@string/small_text"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_staff_id"
@@ -138,17 +226,17 @@
                         android:layout_weight="1"
                         android:text="@string/small_text"
                         android:textColor="@color/black"
-                        android:textSize="14sp"/>
+                        android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
+
         <ImageView
             android:id="@+id/iv_sync_status"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            app:srcCompat="@drawable/ic_done_all_black_24dp"
-            />
-    </LinearLayout>
+            app:srcCompat="@drawable/ic_done_all_black_24dp" />
+    </LinearLayout>-->
 </androidx.cardview.widget.CardView>
