--- a/mifosng-android/src/main/res/layout/row_group_name.xml
+++ b/mifosng-android/src/main/res/layout/row_group_name.xml
@@ -28,8 +28,7 @@
             android:layout_weight="1"
             android:background="@color/white"
             android:gravity="center_vertical"
-            android:orientation="vertical"
-            android:paddingLeft="16dp">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_group_name"
@@ -39,7 +38,8 @@
                 android:lines="1"
                 android:text="@string/medium_text"
                 android:textColor="@color/black"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:textStyle="bold"/>
 
 
             <TextView
